--- a/data/remoteFixes.css
+++ b/data/remoteFixes.css
@@ -1,1 +1,6 @@
 /* this file used to fix css bugs without uploading the extension to google on each problem */
+html .alert-system-feedback .alert {
+	top: -50%;
+	/* transform: translate(0, -200%); */
+  transform: none !important;
+}
