--- a/roblokis/js/Theme/Pages/all.css
+++ b/roblokis/js/Theme/Pages/all.css
@@ -57,8 +57,8 @@
 
 /* Fix error message peaking under navbar */
 html .alert-system-feedback .alert {
-	/* top: -25%; */
-	transform: translate(0, -200%);
+	top: -50%;
+	/* transform: translate(0, -200%); */
 }
 
 body .rbx-header .rbx-navbar-header {
