--- a/roblokis/js/Theme/Pages/home.css
+++ b/roblokis/js/Theme/Pages/home.css
@@ -32,8 +32,10 @@ div.section-content.people-list li.list-item.friend:hover span.avatar-status {
 
 
 /* fixes hover cuts */
-body .section .people-list,
 .game-carousel {
 	padding: 6px;
 	box-sizing: content-box;
+}
+body .section .people-list {
+	overflow: visible;
 }
