--- a/data/remoteFixes.css
+++ b/data/remoteFixes.css
@@ -1,24 +1,13 @@
 /* this file used to fix css bugs without uploading the extension to google on each problem */
-/* fix notification not showing */
-html .alert-system-feedback .alert {
-	top: -50%;
-	/* transform: translate(0, -200%); */
-  transform: none !important;
+#rbx-body.dark-theme .modal-dialog .modal-content, #rbx-body.dark-theme .popover {
+	background: var(--rk-popup-background, #393b3d);
 }
-/* RoPro fix most played section */
-#mostPlayedContainer > li > div > a.game-card-link {
-	min-height: 145px !important;
-	padding: 0px !important;
+#rbx-body.light-theme .modal-dialog .modal-content, #rbx-body.light-theme .popover {
+	background: var(--rk-popup-background, #fff);
 }
-#mostPlayedContainer .game-card-name {
-	height: auto !important;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
+#rbx-body.dark-theme .popover.bottom>.arrow, #rbx-body.dark-theme .popover.bottom>.arrow:after {
+	border-bottom-color: var(--rk-popup-background-color, #fff);
 }
-#mostPlayedContainer .game-card-thumb-container::after {
-	opacity: 0 !important;
-}
-#mostPlayedContainer .game-card-link .game-card-thumb-container .thumbnail-2d-container {
-	width: 100% !important;
-	height: 100% !important;
+#rbx-body.light-theme .popover.bottom>.arrow, #rbx-body.light-theme .popover.bottom>.arrow:after {
+	border-bottom-color: var(--rk-popup-background-color, #fff);
 }
