--- a/data/remoteFixes.css
+++ b/data/remoteFixes.css
@@ -1,4 +1,5 @@
 /* this file used to fix css bugs without uploading the extension to google on each problem */
+/* fix popups no background by default */
 #rbx-body.dark-theme .modal-dialog .modal-content, #rbx-body.dark-theme .popover {
 	background: var(--rk-popup-background, #393b3d);
 }
@@ -6,7 +7,7 @@
 	background: var(--rk-popup-background, #fff);
 }
 #rbx-body.dark-theme .popover.bottom>.arrow, #rbx-body.dark-theme .popover.bottom>.arrow:after {
-	border-bottom-color: var(--rk-popup-background-color, #fff);
+	border-bottom-color: var(--rk-popup-background-color, #393b3d);
 }
 #rbx-body.light-theme .popover.bottom>.arrow, #rbx-body.light-theme .popover.bottom>.arrow:after {
 	border-bottom-color: var(--rk-popup-background-color, #fff);
