--- a/roblokis/js/Theme/Extras/extensions.css
+++ b/roblokis/js/Theme/Extras/extensions.css
@@ -7,11 +7,11 @@
 
 
 
-#game-badges-container > game-badges-list > div > ul > li > div.badge-content > ul {
+.rbx-body .game-badges-list > ul.stack-list > li > div.badge-content > ul {
 	margin: 0;
 	display: flex;
 	flex-wrap: wrap;
 }
-#game-badges-container > game-badges-list > div > ul > li > div.badge-content > ul > li.thecut {
+.rbx-body .game-badges-list > ul.stack-list > li > div.badge-content > ul > li.thecut {
 	display: none;
 }
