--- a/roblokis/js/Theme/Pages/games.css
+++ b/roblokis/js/Theme/Pages/games.css
@@ -54,6 +54,10 @@
 #game-details-play-button-container > button:hover {
 	transform: var(--rk-basic-animations, scale(1.08) rotate(-2deg));
 }
+/* fix icon being sized wrongly when using custom icons */
+#rbx-body .btn-common-play-game-lg span[class^=icon-] {
+	background-position: 0 -36px;
+}
 
 
 
