--- a/roblokis/js/Theme/Pages/settings.css
+++ b/roblokis/js/Theme/Pages/settings.css
@@ -7,24 +7,24 @@
 	width: 100%;
 }
 
-#vertical-menu,
-#vertical-menu > li.menu-option > a,
+#rbx-body .menu-vertical,
+.menu-vertical .menu-option > a,
 div.section .section-content {
 	background-color: transparent;
 }
 
-#vertical-menu,
+.menu-vertical,
 div.section .section-content:not(.remove-panel) {
 	border-style: solid;
 	border-width: 0 1px 1px 0;
     border-radius: 16px;
 }
 
-#vertical-menu > li.menu-option:first-child,
-#vertical-menu > li.menu-option:first-child > a {
+.menu-vertical > li:first-child,
+.menu-vertical > li:first-child * {
 	border-top-left-radius: 16px;
 }
-#vertical-menu > li.menu-option:last-child,
-#vertical-menu > li.menu-option:last-child > a {
+.menu-vertical > li:last-child,
+.menu-vertical > li:last-child * {
 	border-bottom-left-radius: 16px;
 }
